[package]
name = "forsprite"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
env_logger = "0.10.0"
image = { version = "0.24.7", features = [ "png", "jpeg"] }
log = "0.4.20"
nalgebra = "0.32.3"
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"
